--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,24 @@
-server.port=8080
-spring.datasource.url=jdbc:postgresql://arqui-postgres-db.cjq62wwgssut.us-east-2.rds.amazonaws.com:5432/prestamosautomotrices 
+server.port=9000
+spring.application.name=ventanilla-service
+
+# Base de datos
+spring.datasource.url=jdbc:postgresql://localhost:5432/examen_2p 
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=123
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.properties.hibernate.default_schema=analisis_crediticio
+
+# JPA/Hibernate
+spring.jpa.properties.hibernate.default_schema=ventanilla_efectivo
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
-spring.cloud.compatibility-verifier.enabled=false
+
+# OpenAPI/Swagger
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operations-sorter=method
+
+# Logging
 logging.config=classpath:logback-spring.xml
