--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,14 @@
 server.port=9000
 spring.application.name=ventanilla-service
 
-# Base de datos
-spring.datasource.url=jdbc:postgresql://localhost:5432/examen_2p 
-spring.datasource.username=postgres
-spring.datasource.password=123
-spring.datasource.driver-class-name=org.postgresql.Driver
+# MongoDB Configuration
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=examen_2p
+spring.data.mongodb.authentication-database=admin
 
-# JPA/Hibernate
-spring.jpa.properties.hibernate.default_schema=ventanilla_efectivo
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+# MongoDB logging
+logging.level.org.springframework.data.mongodb=DEBUG
 
 # OpenAPI/Swagger
 springdoc.api-docs.path=/api-docs
